crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@367.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create or replace function get_first_user() returns users as\n$$ SELECT * FROM users ORDER BY userid LIMIT 1; $$\nlanguage sql stable;"
---
CreateFunctionStmt@0..132
  Create@0..6 "create"
  Whitespace@6..7 " "
  Or@7..9 "or"
  Whitespace@9..10 " "
  Replace@10..17 "replace"
  Whitespace@17..18 " "
  Function@18..26 "function"
  Whitespace@26..27 " "
  Ident@27..41 "get_first_user"
  Ascii40@41..42 "("
  Ascii41@42..43 ")"
  Whitespace@43..44 " "
  Returns@44..51 "returns"
  Whitespace@51..52 " "
  TypeName@52..57
    Ident@52..57 "users"
  Whitespace@57..58 " "
  DefElem@58..111
    As@58..60 "as"
    Newline@60..61 "\n"
    List@61..111
      Sconst@61..111 "$$ SELECT * FROM user ..."
  Newline@111..112 "\n"
  DefElem@112..124
    Language@112..120 "language"
    Whitespace@120..121 " "
    SqlP@121..124 "sql"
  Whitespace@124..125 " "
  DefElem@125..131
    Stable@125..131 "stable"
  Ascii59@131..132 ";"

