crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@368.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT get_first_user();
---
SelectStmt@0..24
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..21
    FuncCall@7..21
      Ident@7..21 "get_first_user"
  Ascii40@21..22 "("
  Ascii41@22..23 ")"
  Ascii59@23..24 ";"

