crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@371.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT get_users();
---
SelectStmt@0..19
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..16
    FuncCall@7..16
      Ident@7..16 "get_users"
  Ascii40@16..17 "("
  Ascii41@17..18 ")"
  Ascii59@18..19 ";"

