crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@390.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select * from usersview;
---
SelectStmt@0..24
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..23
    Ident@14..23 "usersview"
  Ascii59@23..24 ";"

